--- a/templates/css-flags/index.html
+++ b/templates/css-flags/index.html
@@ -39,7 +39,23 @@
 
 		<div class="flag_container">
 			<h3 class="flag_title">Greece</h3>
-			<div class="flag flag--greece"></div>
+			<div class="flag flag--greece">
+				<div class="square">
+					<div class="square--white"></div>
+					<div class="square--white"></div>
+					<div class="square--white"></div>
+					<div class="square--white"></div>
+				</div>
+				<div class="stripe stripe-azule"></div>
+				<div class="stripe"></div>
+				<div class="stripe stripe-azule"></div>
+				<div class="stripe"></div>
+				<div class="stripe stripe-azule"></div>
+				<div class="stripe"></div>
+				<div class="stripe stripe-azule"></div>
+				<div class="stripe"></div>
+				<div class="stripe stripe-azule"></div>
+			</div>
 		</div>
 	</body>
 </html>
