--- a/templates/css-flags/styles.css
+++ b/templates/css-flags/styles.css
@@ -75,6 +75,150 @@ body {
 /* ---------------------------------------------------------------------- */
 /* Greece */
 /* ---------------------------------------------------------------------- */
+.stripe {
+    height: calc(100% / 9);
+    background: white;
+}
+
+.stripe-azule {
+    background: blue;
+}
+
+.square {
+    background: rgb(255, 255, 255);
+    aspect-ratio: 1;
+    height: calc(100% / 9 * 5);
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.square--white {
+    background: blue;
+
+    height: calc(100% / 5 * 2);
+    aspect-ratio: 1;
+    position: absolute;
+}
+
+.square--white:nth-child(1) {
+    background: rgba(100, 100, 100);
+    top: 0;
+    left: 0;
+}
+
+.square--white:nth-child(2) {
+    background: rgb(167, 67, 67);
+    top: 0;
+    right: 0;
+}
+
+.square--white:nth-child(3) {
+    background: rgb(157, 29, 29);
+    bottom: 0;
+    right: 0;
+}
+
+.square--white:nth-child(4) {
+    background: rgb(60, 2, 2);
+    bottom: 0;
+    left: 0;
+}
+
+/* .square--white {
+    background: rgb(255, 255, 255);
+    width: 100%;
+    height: calc(100% / 5 * 1);
+}
+
+.square--white:nth-child(2) {
+    background: rgb(255, 255, 255);
+    transform: rotate(90deg);
+    position: absolute;
+} */
+
+
+/* .flag--greece {
+    background: white;
+}
+
+
+
+.flag--greece .chess {
+    background: rgb(255, 255, 255);
+    height: calc(100% / 9 * 5);
+    aspect-ratio: 1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.square {
+    height: calc(100% / 5 * 2);
+    aspect-ratio: 1;
+    background: blue;
+    position: absolute;
+}
+
+.square:nth-child(1) {
+    top: 0;
+    left: 0;
+}
+
+.square:nth-child(2) {
+    top: 0;
+    right: 0;
+}
+
+.square:nth-child(3) {
+    bottom: 0;
+    right: 0;
+}
+
+.square:nth-child(4) {
+    bottom: 0;
+    left: 0;
+}
+
+/* 
+.flag--greece .square {
+    background: blue;
+    height: calc(100% / 9 * 5);
+    aspect-ratio: 1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.square-stripe {
+    background: rgb(255, 255, 255);
+    height: calc(100% / 5 * 1);
+    width: 100%;
+}
+
+.square-stripe:nth-child(2) {
+    background: rgb(255, 255, 255);
+    position: inherit;
+    transform: rotate(90deg);
+    right: 0;
+}  
+
+
+.flag--greece .stripe {
+    background: blue;
+    height: calc(100% / 9);
+}
+
+.flag--greece .stripe-white {
+    background: white;
+} */
 
 
 
